src/components/Table/styles.css
.NLT__table-outer {
	overflow: auto;
	flex: 1;
	width: 100%;
}

.NLT__table-inner {
    padding-bottom: var(--size-4-4);
}

.NLT__table {
	table-layout: fixed;
	border-collapse: collapse;
}

.NLT__table,
.NLT__thead,
.NLT__tbody,
.NLT__tfoot,
.NLT__tr {
	border: 0 !important;
}

.NLT__th {
	/* border-top: 1px solid var(--background-modifier-border) !important; */
	border-bottom: 1px solid var(--background-modifier-border) !important;
	border-left: 1px solid var(--background-modifier-border) !important;
	border-right: 0 !important;
	padding: 0 !important;
	font-weight: 400 !important;
	overflow: visible;
	text-align: start;
	background-color: var(--background-secondary) !important;
	position: sticky !important;
	top: 0;
	z-index: 1;
}

.NLT__th:first-child {
	border-left: 0 !important;
}

.NLT__th:last-child {
	border-top: 0 !important;
	border-bottom: 0 !important;
	background-color: var(--background-primary) !important;
}

.NLT__td {
	border-top: 0 !important;
	border-bottom: 1px solid var(--background-modifier-border) !important;
	border-left: 1px solid var(--background-modifier-border) !important;
	border-right: 0 !important;
	padding: 0 !important;
	overflow: visible;
	vertical-align: top;

	/** 
	* This is a hack to make the children have something to calculate their height percentage from.
	* i.e. if you have a child with height: 100%, it will be 100% of the height of the td, only
	* if the td has a set height value.
	* This doesn't represent the actual height of the td, as that is set by HTML
	*/
	height: 1px;
}

.NLT__td:first-child {
	border-left: 0 !important;
}

.NLT__tbody > .NLT__tr > .NLT__td:last-child {
	border-top: 0 !important;
	border-bottom: 0 !important;
}

.NLT__tbody > .NLT__tr:last-child > .NLT__td:last-child {
	border-bottom: 0 !important;
}

.NLT__tfoot > .NLT__tr > .NLT__td {
	border: 0 !important;
}

.NLT__tfoot > .NLT__tr:first-child > .NLT__td {
	border-bottom: 1px solid var(--background-modifier-border) !important;
}

.NLT__tfoot > .NLT__tr:first-child > .NLT__td:last-child {
	border-bottom: 0 !important;
	border-left: 1px solid var(--background-modifier-border) !important;
}

